# xdataset

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  __test_roundtrip.csv  block.cc  block.h  cell_series.cc  cell_series.h  dataset.h  dimension_spec.cc  main.cc  multi_dimension.h  multi_dimension_spec.cc  multi_dimension_spec.h  multi_index_selector.cc  multi_index_selector.h  variable_data.cc  variable_data.h  variable_spec.cc  variable_spec.h  vcpkg.json  xdataset_predefine.h
Doc/: Data_Structures.md  Multi_Dimensional_Data.md  Python_Data_Model.md
apps/xdataset_playground/: main.cc
docs/: Architecture.md  Arithmetic_Broadcasting_Rules.md  Data_Structures.md  Multi_Dimensional_Data.md  Python_Data_Model.md  Variable_Arithmetic_Units.md  Variable_Design.md  llnl_units_dictionary.md  llnl_units_strings.md
include/xdataset/: block.h  cell_series.h  data_array.h  data_frame.h  data_series.h  dataset.h  dimension_spec.h  grid_model.h  measurement.h  multi_dimension_spec.h  multi_index_selector.h  table_data.h  unit.h  units_util.h  variable.h  variable_data.h  variable_descriptor.h  variable_spec.h  xdataset_predefine.h
include/xdataset/detail/: storage.h
src/: arithmetic.cc  block.cc  data_array.cc  data_frame.cc  data_series.cc  dataset.cc  dimension_spec.cc  grid_model.cc  measurement.cc  multi_dimension_spec.cc  multi_index_selector.cc  table_data.cc  unit.cc  units_util.cc  variable.cc  variable_data.cc  variable_descriptor.cc  variable_spec.cc
staged/: multi_dimension.h  variable_data.h  variable_data_test.cc
tests/: arithmetic_test.cc  block_fixtures.h  block_test.cc  block_test_helpers.h  cell_series_test.cc  data_array_test.cc  data_frame_test.cc  data_series_test.cc  dataset_test.cc  grid_model_test.cc  measurement_test.cc  multi_dimension_test.cc  table_data_test.cc  unit_test.cc  units_util_test.cc  variable_data_test.cc  variable_test.cc
